<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="menu_list">프로젝트 목록</string>
    <string name="menu_detail">프로젝트 세부정보</string>
    <string name="menu_info">프로젝트 정보</string>
    <string name="button_addspace">+ 프로젝트 추가</string>
    <string name="menu_addspace">프로젝트 추가</string>
    <string name="my_project_list">내 프로젝트 목록</string>
    <string name="select_address">주소를 선택해주세요.</string>
    <string name="input_nickname">닉네임을 입력해주세요.</string>
    <string name="button_next">다음으로</string>
    <string name="signup">회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="logo">No-title</string>
    <string name="check_id">중복체크</string>
    <string name="certification">인증하기</string>
    <string name="plz_email">이메일을 입력해주세요</string>
    <string name="plz_password">비밀번호를 입력해주세요</string>
    <string name="plz_current_password">현재 비밀번호를 입력해주세요</string>
    <string name="plz_new_password">새로운 비밀번호를 입력해주세요</string>
    <string name="plz_phonenumber">휴대폰번호를 입력해주세요</string>
    <string name="plz_name">이름을 입력해주세요</string>
    <string name="plz_certificationnumber">인증번호를 입력해주세요</string>
    <string name="move_main">메인으로</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_intro">IntroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
