<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".Signup3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="휴대폰번호를 입력해주세요"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="입력하신 휴대폰번호로 로그인이 가능합니다"
            android:textColor="@color/gray3"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingTop="20dp"
                android:textColorHint="@color/gray3"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/orange"
                app:boxStrokeErrorColor="@color/red"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plz_phonenumber"
                    android:includeFontPadding="false"
                    android:inputType="phone"
                    android:textCursorDrawable="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/button_certificationRequest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/invisible"
                android:includeFontPadding="false"
                android:text="인증요청"
                android:textColor="@color/orange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:paddingTop="20dp"
                android:textColorHint="@color/gray3"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/orange"
                app:boxStrokeErrorColor="@color/red"
                app:errorTextColor="@color/red"
                app:hintTextColor="@color/orange">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextCertificationNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/plz_certificationnumber"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:textCursorDrawable="@color/orange" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:includeFontPadding="false"
            android:text="4/5"
            android:textColor="@color/gray2"
            android:textSize="12sp" />

        <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="80"
            android:progressTint="@color/gray2" />

        <android.widget.Button
            android:id="@+id/button_certification"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/button_solidorange"
            android:includeFontPadding="false"
            android:text="@string/certification"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>